--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :password_digest %>
-    <%= form.text_area :password_digest %>
+    <%= form.label :password %>
+    <%= form.text_area :password %>
+  </div>
+
+  <div class="field">
+    <%= form.label :password_confirmation %>
+    <%= form.text_area :password_confirmation %>
   </div>
 
   <div class="field">
